<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/d_16">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d_8"
        android:hint="@string/new_pin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_8"
        android:layout_marginBottom="@dimen/d_8"
        android:hint="@string/confirm_pin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        style="@style/Text16B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_8"
        android:layout_marginBottom="@dimen/d_8"
        android:background="@color/white"
        android:text="@string/error_pin"
        android:textColor="@color/RedSoda"
        android:visibility="gone" />

    <Button
        android:id="@+id/btCreatePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/d_16"
        android:visibility="visible"
        android:background="@color/colorAccent"
        android:text="@string/create_pin"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btDeletePin"
        android:theme="@style/Theme.ESign_Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_margin="@dimen/d_16"
        android:background="@color/white"
        android:text="@string/delete_pin"
        android:textColor="@color/white" />

</LinearLayout>