<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyt_openFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/d_16"
            android:src="@drawable/ic_insert_drive_file_black_24dp"
            android:tint="@color/charcoalGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text16B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_file" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/d_16"
            android:src="@drawable/ic_menu_send"
            android:tint="@color/charcoalGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text16B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_copyTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/d_16"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:tint="@color/charcoalGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView4"
            style="@style/Text16B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_to" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/d_16"
            android:src="@drawable/ic_signpdf"
            android:tint="@color/charcoalGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text16B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rename" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/d_16"
            android:src="@drawable/ic_delete_black_24dp"
            android:tint="@color/charcoalGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text16B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>